Fix spacing of some elements

--- a/war/src/main/js/widgets/config/tabbar.less
+++ b/war/src/main/js/widgets/config/tabbar.less
@@ -142,56 +142,6 @@
         border-collapse: collapse;
       }
 
-      // Input elements
-      input[type='email'].setting-input,
-      input[type='password'].setting-input,
-      input[type='text'].setting-input {
-        height: var(--input-line-height);
-        line-height: var(--input-line-height);
-        padding: 0 5px;
-        .border-radius(@border-radius);
-      }
-
-      select:not([multiple]) {
-        height: var(--input-line-height);
-        line-height: var(--input-line-height);
-      }
-
-      select:not(.select-ajax-pending) {
-        border-radius: 0;
-        background: var(--brightest-bg-color);
-      }
-
-      // Bottom buttons
-      .bottom-sticker-edge {
-        display:none;
-      }
-      .bottom-sticker-inner{
-        padding: 20px 10px 25px 20px;
-        border-top-right-radius: 10px;
-        border: 1px solid var(--configure-job-bottom-sticker-border-color);
-        background: var(--configure-job-bottom-sticker-bg-color);
-      }
-
-      .bottom-sticker,
-      #bottom-sticker{
-        width: auto;
-        margin-left: -10px;
-        overflow: hidden;
-        padding-bottom: 10px;
-        margin: 30px 30px -25px -15px;
-        z-index:9;
-
-        .cover{
-          position:absolute;
-          top:0;
-          bottom:0;
-          left:0;
-          right:0;
-          z-index:2;
-        }
-      }
-
       p,
       .help,
       .setting-description {
